[project]
name = "pylsl"
description = "Python library for importing XDF (Extensible Data Format)"
authors = [
  { name = "Christian Kothe", email = "christian.kothe@intheon.io" },
  { name = "Chadwick Boulay", email = "chadwick.boulay@gmail.com" }
]
#license = {file = "LICENSE"}  # Bug in setuptools. https://github.com/astral-sh/uv/issues/9513
readme = "README.md"
requires-python = ">=3.9"
dynamic = ["version"]
keywords = [
  "networking",
  "LSL",
  "Lab Streaming Layer",
  "labstreaminglayer",
  "data",
  "acquisition",
  "stream"
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Topic :: System :: Networking",
  "Topic :: Scientific/Engineering",
  "License :: OSI Approved :: MIT License",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Operating System :: MacOS",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
    "numpy>=1.21,<3",
]

[project.urls]
Repository = "https://github.com/labstreaminglayer/pylsl"
Issues = "https://github.com/labstreaminglayer/pylsl/issues"

[project.optional-dependencies]
examples = [
    "pyqtgraph>=0.13.7",
]
#Changelog = "https://github.com/labstreaminglayer/pylsl/blob/main/CHANGELOG.md"

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "ruff>=0.8.2",
]

[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
license-files = []

[tool.setuptools_scm]
version_file = "src/pylsl/__version__.py"

[tool.setuptools.package-data]
pylsl = ["lib/*.dll", "lib/*.so*", "lib/*.dylib"]
